W-11995900: Add full set of attributes to configuration according to spec (#1885)

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <module>extensions-xml-support</module>
     <module>logging</module>
     <module>tooling-support-tests</module>
+    <module>tracing</module>
   </modules>
 
   <properties>
