--- a/tracing/pom.xml
+++ b/tracing/pom.xml
@@ -286,7 +286,7 @@
         <dependency>
             <groupId>org.mule.runtime</groupId>
             <artifactId>mule-tracer-exporter-configuration-api</artifactId>
-            <version>4.5.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mule.tests</groupId>
