W-12206167: Create a copy of loggingVariables to avoid race conditions (#1919)
* W-12206167: Create a copy of loggingVariables to avoid race conditions

* to avoid initialization error

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -39,6 +39,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-tracing-module</artifactId>
+            <version>1.0.0</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+        <dependency>
             <groupId>org.mule.runtime</groupId>
             <artifactId>mule-core</artifactId>
             <version>${project.version}</version>
