--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -296,6 +296,12 @@
             <version>${project.version}</version>
             <classifier>mule-plugin</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.mule.tests</groupId>
+            <artifactId>mule-subtypes-extension</artifactId>
+            <version>${project.version}</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
 
         <dependency>
             <groupId>org.mule.runtime</groupId>
