--- a/tracing/pom.xml
+++ b/tracing/pom.xml
@@ -403,5 +403,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.mule.runtime</groupId>
+            <artifactId>mule-artifact-ast</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
