W-12980682: Module support in mule

--- a/build.yaml
+++ b/build.yaml
@@ -7,3 +7,4 @@ additionalConfigFileMetadataProviderList:
   - fileId: mule-runtime-maven-settings-MuleSettings
     variable: org.mule.maven.client.api.SettingsSupplierFactory.userSettings
 projectType: runtime
+jdkTool: OPEN-JDK17
