--- a/build.yaml
+++ b/build.yaml
@@ -7,4 +7,11 @@ additionalConfigFileMetadataProviderList:
   - fileId: mule-runtime-maven-settings-MuleSettings
     variable: org.mule.maven.client.api.SettingsSupplierFactory.userSettings
 projectType: runtime
-jdkTool: OPEN-JDK17
+# TODO W-13029381 Change to 17
+jdkTool: OPEN-JDK11
+additionalTestConfigs:
+  jdk8:
+    testJdkTool: OPEN-JDK8
+# TODO W-13029381 uncomment when default changes to java 17
+  #jdk11:
+    #testJdkTool: OPEN-JDK11
