W-13065850: add automatic module for gateway dependencies

--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -9,6 +9,7 @@
     <artifactId>mule-module-oauth-tests</artifactId>
     
     <properties>
+        <javaModuleName>org.mule.runtime.integration.tests.oauth</javaModuleName>
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
         <muleHttpServiceVersion>1.7.0-SNAPSHOT</muleHttpServiceVersion>
     </properties>
