--- a/extensions-xml-support/pom.xml
+++ b/extensions-xml-support/pom.xml
@@ -15,6 +15,7 @@
     </description>
 
     <properties>
+        <javaModuleName>org.mule.runtime.integration.tests.extensions.xml.support</javaModuleName>
         <activemq.version>5.14.5</activemq.version>
         <javaxJmsApiVersion>2.0.1</javaxJmsApiVersion>
 
