--- a/munit-tests/pom.xml
+++ b/munit-tests/pom.xml
@@ -13,6 +13,7 @@
     <name>MUnit Integration Tests</name>
 
     <properties>
+        <javaModuleName>org.mule.runtime.integration.tests.munit</javaModuleName>
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
     </properties>
 
