--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -13,7 +13,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <javaModuleName>org.mule.runtime.integration.tests.integration</javaModuleName>
+        <javaModuleName>org.mule.test.integration</javaModuleName>
         <skipExportTests>false</skipExportTests>
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
 
