--- a/soap-connect/soap-extension/pom.xml
+++ b/soap-connect/soap-extension/pom.xml
@@ -17,7 +17,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <javaModuleName>org.mule.runtime.integration.tests.soap.extension</javaModuleName>
+        <javaModuleName>org.mule.test.integration.soap.extension</javaModuleName>
         <testExtensionModelLoaderId>soap</testExtensionModelLoaderId>
         <formatterConfigPath>../../formatter.xml</formatterConfigPath>
 
