W-13091006: Fix flaky ProcessorInterceptorFactoryTestCase#failingOperationMappedErrorTypePreserved (#2009)
(cherry picked from commit 78400c136f9899b9407dd0b6ad3ed0804127d061)

--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,18 @@
       <version>${muleSdkApiVersion}</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>com.github.tomakehurst</groupId>
+      <artifactId>wiremock</artifactId>
+      <version>1.58</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
 
   <repositories>
