W-13065850: add automatic module for gateway dependencies (#2011)
* W-13065850: add automatic module for gateway dependencies

--- a/security/pom.xml
+++ b/security/pom.xml
@@ -15,6 +15,7 @@
     <name>Mule Extensions Security Integration Tests</name>
 
     <properties>
+        <javaModuleName>org.mule.test.integration.security</javaModuleName>
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
         <springSecurityVersion>5.1.0.RELEASE</springSecurityVersion>
     </properties>
