--- a/schedulers-tests/pom.xml
+++ b/schedulers-tests/pom.xml
@@ -9,6 +9,7 @@
     <artifactId>schedulers-tests</artifactId>
 
     <properties>
+        <javaModuleName>org.mule.test.integration.scheduler</javaModuleName>
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
     </properties>
 
