--- a/soap-connect/integration-tests/pom.xml
+++ b/soap-connect/integration-tests/pom.xml
@@ -14,6 +14,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <javaModuleName>org.mule.test.integration.soap.connect</javaModuleName>
         <cxfVersion>3.5.1</cxfVersion>
         <muleSdkApiVersion>1.0.0-SNAPSHOT</muleSdkApiVersion>
         <javax.jws-api.version>1.1</javax.jws-api.version>
