W-13167592: Fix split packages between mule-oauth-client and mule-service-oauth-api

--- a/extensions-mule-support/pom.xml
+++ b/extensions-mule-support/pom.xml
@@ -56,6 +56,12 @@
         </dependency>
         <dependency>
             <groupId>org.mule.services</groupId>
+            <artifactId>mule-service-scheduler</artifactId>
+            <classifier>mule-service</classifier>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mule.services</groupId>
             <artifactId>mule-service-weave</artifactId>
             <classifier>mule-service</classifier>
             <scope>test</scope>
